splitted k8s manifests to k8s-dev and k8s-prod

--- a/infra/k8s/expiration-depl.yaml
+++ b/infra/k8s/expiration-depl.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
         - name: expiration
           image: weridherd/expiration
-          imagePullPolicy: Never
+          # imagePullPolicy: Never
           env:
             - name: NATSS_URL
               value: 'http://natss-srv:4222'
