--- a/infra/k8s/payments-depl.yaml
+++ b/infra/k8s/payments-depl.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
         - name: payments
           image: weridherd/payments
-          imagePullPolicy: Never
+          # imagePullPolicy: Never
           env:
             - name: MONGO_URI
               value: 'mongodb://payments-mongo-srv:27017/payments'
