--- a/infra/k8s/orders-depl.yaml
+++ b/infra/k8s/orders-depl.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
         - name: orders
           image: weridherd/orders
-          imagePullPolicy: Never
+          # imagePullPolicy: Never
           env:
             - name: MONGO_URI
               value: 'mongodb://orders-mongo-srv:27017/orders'
