--- a/infra/k8s/tickets-depl.yaml
+++ b/infra/k8s/tickets-depl.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
         - name: tickets
           image: weridherd/tickets
-          imagePullPolicy: Never
+          # imagePullPolicy: Never
           env:
             - name: MONGO_URI
               value: 'mongodb://tickets-mongo-srv:27017/tickets'
